--- a/variables.env
+++ b/variables.env
@@ -2,3 +2,4 @@ DB_URL=`mongodb+srv://root:Msar2117+@restapi.ithne.mongodb.net/crm-database`
 SECRETA=palabrasupersecreta
 FRONTEND_URL='http://localhost:3000'
 HOST=localhost
+PORT=4000
